--- a/game-server/build.gradle
+++ b/game-server/build.gradle
@@ -13,5 +13,10 @@ dependencies {
     compile("org.springframework.boot:spring-boot-starter-actuator")
     // end::actuator[]
 
+
+
     testCompile group: 'junit', name: 'junit', version: '4.11'
+    testCompile group: 'org.mockito', name: 'mockito-all', version: '1.9.5'
+    testCompile("org.springframework:spring-test")
+
 }
