--- a/game-server/build.gradle
+++ b/game-server/build.gradle
@@ -13,6 +13,8 @@ dependencies {
     compile("org.springframework.boot:spring-boot-starter-actuator")
     // end::actuator[]
 
+    compile("org.redisson:redisson:3.1.0")
+
 
 
     testCompile group: 'junit', name: 'junit', version: '4.11'
